[project]
name = httppubsubserver
version = 0.0.1
description = "PubSub over HTTP"
authors = [
    { name = "Timothy Moore", email = "mtimothy984@gmail.com" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "fastapi>=0.115",
    "aiohttp>=3.11"
]

[project.scripts]
httppubsubserver = "httppubsubserver:main"
