[project]
name = "lonelypss"
version = "0.0.1"
description = "PubSub over HTTP"
authors = [
    { name = "Timothy Moore", email = "mtimothy984@gmail.com" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "fastapi>=0.115",
    "aiohttp>=3.11"
]

[project.scripts]
lonelypss = "lonelypss.main:main"

[project.optional-dependencies]
standard = [
    "uvicorn>=0.32",
    "colorama>=0.4;sys_platform == 'win32'",
    "httptools>=0.6.3",
    "python-dotenv>=0.13",
    "PyYAML>=5.1",
    "uvloop>=0.14.0,!=0.15.0,!=0.15.1; sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')",
    "watchfiles>=0.13",
    "websockets>=10.4",
    "zstandard>=0.23"
]